--- a/vol1/practice1/tobyspring/build.gradle
+++ b/vol1/practice1/tobyspring/build.gradle
@@ -14,6 +14,8 @@ repositories {
 
 dependencies {
 //	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+//	implementation 'org.springframework:spring-jdbc:5.0.2.RELEASE'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
