--- a/vol1/practice1/tobyspring/src/main/resources/application.properties
+++ b/vol1/practice1/tobyspring/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost/tobyspringvol1?autoReconnection=true
+spring.datasource.username=scott
+spring.datasource.password=tiger
 
