--- a/vol1/practice1/tobyspring/build.gradle
+++ b/vol1/practice1/tobyspring/build.gradle
@@ -17,10 +17,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 //	implementation 'org.springframework:spring-jdbc:5.0.2.RELEASE'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-test'
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
-tasks.named('test') {
+test {
 	useJUnitPlatform()
 }
